continuous-kubernetes-compliance/manifests/require-nonroot-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirenonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequireNonRoot
  targets:
  - target: admission.k8s.gatekeeper.sh
    code:
    - engine: Rego
      source:
        version: "v1"
        rego: |
          package k8srequirenonroot

          violation contains {"msg": msg} if {
            not input.review.object.spec.template.spec.securityContext.runAsNonRoot
            msg := "pod-level securityContext.runAsNonRoot must be true"
          }

          violation contains {"msg": msg} if {
            container := input.review.object.spec.template.spec.containers[_]
            not container.securityContext.runAsNonRoot
            msg := sprintf("container %q must set securityContext.runAsNonRoot=true", [container.name])
          }
