continuous-kubernetes-compliance/manifests/require-nonroot.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNonRoot
metadata:
  name: require-nonroot
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - apps
      kinds:
      - Deployment
