continuous-kubernetes-compliance/manifests/require-resource-limits-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequireresourcelimits
spec:
  crd:
    spec:
      names:
        kind: K8sRequireResourceLimits
  targets:
  - target: admission.k8s.gatekeeper.sh
    code:
    - engine: Rego
      source:
        version: "v1"
        rego: |
          package k8srequireresourcelimits

          violation contains {"msg": msg} if {
            container := input.review.object.spec.template.spec.containers[_]
            not container.resources.limits.cpu
            msg := sprintf("container %q must define resources.limits.cpu", [container.name])
          }

          violation contains {"msg": msg} if {
            container := input.review.object.spec.template.spec.containers[_]
            not container.resources.limits.memory
            msg := sprintf("container %q must define resources.limits.memory", [container.name])
          }
