continuous-kubernetes-compliance/manifests/require-resource-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireResourceLimits
metadata:
  name: require-resource-limits
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - apps
      kinds:
      - Deployment
